B&L QA/objects/APACSU_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>APACSU Survey</relationshipLabel>
        <relationshipName>APACSU_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_the_Survery__c</fullName>
        <label>Link to the Survery</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Next_Due_Date__c</fullName>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Due_Date__c</fullName>
        <label>Previous Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Date_taken__c</fullName>
        <label>Survey Date taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Taken_By__c</fullName>
        <label>Survey Taken By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>APACSU Survey</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>APACSU Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APACSU Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>